# rosbag2

mcap_vendor/: CHANGELOG.rst
ros2bag/: CHANGELOG.rst
rosbag2/: CHANGELOG.rst
rosbag2_compression/: CHANGELOG.rst
rosbag2_compression/test/rosbag2_compression/: mock_storage.hpp
rosbag2_compression_zstd/: CHANGELOG.rst
rosbag2_cpp/: CHANGELOG.rst
rosbag2_cpp/test/rosbag2_cpp/: mock_storage.hpp
rosbag2_examples/rosbag2_examples_cpp/: CHANGELOG.rst
rosbag2_examples/rosbag2_examples_py/: CHANGELOG.rst
rosbag2_interfaces/: CHANGELOG.rst
rosbag2_performance/rosbag2_performance_benchmarking/: CHANGELOG.rst
rosbag2_performance/rosbag2_performance_benchmarking_msgs/: CHANGELOG.rst
rosbag2_py/: CHANGELOG.rst
rosbag2_py/src/rosbag2_py/: _storage.cpp
rosbag2_storage/: CHANGELOG.rst
rosbag2_storage/include/rosbag2_storage/: yaml.hpp
rosbag2_storage/test/rosbag2_storage/: test_plugin.cpp  test_plugin.hpp  test_read_only_plugin.cpp  test_read_only_plugin.hpp
rosbag2_storage_default_plugins/: CHANGELOG.rst
rosbag2_storage_mcap/: CHANGELOG.rst  CMakeLists.txt
rosbag2_storage_mcap/src/: mcap_storage.cpp
rosbag2_storage_mcap/test/rosbag2_storage_mcap/: test_mcap_storage.cpp
rosbag2_storage_sqlite3/: CHANGELOG.rst
rosbag2_test_common/: CHANGELOG.rst
rosbag2_test_msgdefs/: CHANGELOG.rst
rosbag2_tests/: CHANGELOG.rst  package.xml
rosbag2_transport/: CHANGELOG.rst
shared_queues_vendor/: CHANGELOG.rst
sqlite3_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
zstd_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+6 files in other folders)
